Fix Firefox text wrapping

--- a/games/befunge/style.css
+++ b/games/befunge/style.css
@@ -56,7 +56,7 @@ textarea{
 	color:white;
 	resize:vertical;
 	overflow:scroll;
-	white-space:nowrap;
+	white-space:pre-wrap;
 	border-color:#555;
 }
 
